# projet-pasteque

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: board.h  colors.h  game_state.h  highscore.h  panel.h  scene.h  ui.h
include/scenes/: crush_scene.h  main_menu_scene.h  story_scene.h
src/: board.c  colors.c  game.c  game_state.c  highscore.c  main  main.c  panel.c  scene.c  ui.c
src/scenes/: crush_scene.c  main_menu_scene.c  story_scene.c  story_scene_text.h
terminfo/x/: xterm-256color-mouse
